Refactor: Replace explicit getters/setters in JPA entities with Lombok annotations and simplify assertions in tests